k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-management
spec:
  selector:
    app: order-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
